tests/invalid/wrong_covariance.stderr
error[E0308]: mismatched types
  --> $DIR/wrong_covariance.rs:7:1
   |
7  | / self_cell!(
8  | |     struct NoCov {
9  | |         owner: String,
10 | |
...  |
13 | |     }
14 | | );
   | |__^ lifetime mismatch
   |
   = note: expected struct `Cell<&'y String>`
              found struct `Cell<&'x String>`
note: the lifetime `'y` as defined on the function body at 535:43...
  --> $DIR/wrong_covariance.rs:7:1
   |
7  | / self_cell!(
8  | |     struct NoCov {
9  | |         owner: String,
10 | |
...  |
13 | |     }
14 | | );
   | |__^
note: ...does not necessarily outlive the lifetime `'x` as defined on the function body at 535:35
  --> $DIR/wrong_covariance.rs:7:1
   |
7  | / self_cell!(
8  | |     struct NoCov {
9  | |         owner: String,
10 | |
...  |
13 | |     }
14 | | );
   | |__^
   = note: this error originates in the macro `$crate::_covariant_access` (in Nightly builds, run with -Z macro-backtrace for more info)
